# narou.rb-webview

./: .gitignore  .htaccess  Cargo.toml  Dockerfile  README.md  __config.docker.php  __config.template.php  _funcs.php  _postconfig.php  _view_conf.php  _view_list.php  _view_new.php  _view_novel.php  _view_read.php  _view_updated.php  _viewitem_apiclientmenu.php  _viewitem_colorselector.php  _viewitem_navbar.php  _viewitem_serverconf.php  _yamlmetadataloader.php  add.php  composer.json  docker-compose.yaml  index.php  intra_route.php  script.bookmark.js  script.conf.js  script.js  script.novel.js  script.reader.js  style.css  update.php
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  devskim-analysis.yml  docker-image.yml  docker-publish-dockerhub.yml  docker-publish.yml  frontend-build.yml  php.yml  psalm.yml  sentry-release-sh.yml
assets/: script.js  style.css
component/: apiclientmenu.php  navbar.php  novel_jump_menu.php  serverconf.php
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: FetchOops.vue  LoadingSpin.vue  NavBar.vue  ReaderPageController.vue
frontend/src/pages/: List.vue  NovelSearch.vue  Revisions.vue  Stories.vue  Story.vue  StorySearch.vue
frontend/src/router/: index.ts
frontend/src/styles/: global.scss
internal/: funcs.php  gitutil.php  postconfig.php  yamlmetadataloader.php
src/: api_endpoint.rs  api_types.rs  full_text.rs  full_text_novel.rs  main.rs  narou_parser.rs  narou_types.rs
view/: list.php  novel.php  novel_history.php  read.php
