[package]
name = "narourb_webview"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
strip = "debuginfo"
debug-assertions = false
lto = "fat"

[features]
default = [
    "full-text",
]
full-text = [
    "tantivy",
    "lindera-tantivy",
    "html2text",
    "lindera"
]

[dependencies]
actix-web = { version= "4.12.1", default-features = false, features = ["macros", "unicode"] }
git2 = { version = "0.20.4", default-features = false }
sentry = { version = "0.46.1", default-features = false, features = ["actix", "tracing", "contexts", "panic", "reqwest", "rustls"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
actix-files = "0.6.9"
tokio = { version = "1.49.0", features = ["fs"] }
chrono = { version = "0.4.43", default-features = false, features = ["std", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-saphyr = "0.0.14"
rayon = "1.11.0"
cached = { version = "0.56.0", features = ["async"] }
tantivy = { version = "0.25.0", optional = true }
lindera-tantivy = { version = "2.0.0", features = ["embed-ipadic-neologd"], optional = true }
html2text = { version = "0.16.7", optional = true }
lindera = { version = "2.2.0", features = ["embed-ipadic-neologd"], optional = true }
